# git-demo

./: CondoOnnuch_WebScraping1.csv  Onnuch_Condo_Rent_Price.ipynb  README.md  pyproject.toml
src/: feature-eda  feature-webscraping.ipynb
